--- a/CSS/solution.css
+++ b/CSS/solution.css
@@ -23,7 +23,6 @@ body {
   background-size: cover;
   margin-inline: 7rem;
   background-attachment: fixed;
-  min-width: fit-content;
 }
 
 img {
@@ -230,6 +229,7 @@ footer {
     margin-inline: 0;
     padding-inline: 1.5rem;
     text-align: start;
+    background-attachment: auto;
   }
   #nav-list {
     display: grid;
